<resources>
    <string name="app_name">Campeonato</string>
    <string name="autor">Gustavo de Paula 111042313003</string>
    <string name="jogador">Jogador</string>
    <string name="time">Time</string>
    <string name="codigo">Codigo</string>
    <string name="nome">Nome</string>
    <string name="cidade">Cidade</string>
    <string name="id">Id</string>
    <string name="nascimento">Data de Nascimento (yyyy-MM-dd)</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="inserir">Inserir</string>
    <string name="buscar">Buscar</string>
    <string name="modificar">Modificar</string>
    <string name="excluir">Excluir</string>
    <string name="listar">Listar</string>
    <string name="app">App Campeonato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>